; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-parser-new.c_tl_finish_subtree.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-parser-new.c_tl_finish_subtree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_combinator_tree = type { i64, i64, i32 }

@.str = private unnamed_addr constant [37 x i8] c"finish_subtree. Type = %s. Act = %s\0A\00", align 1
@type_type = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [19 x i8] c"Not enough params\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tl_finish_subtree(%struct.tl_combinator_tree* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.tl_combinator_tree*, align 8
  store %struct.tl_combinator_tree* %0, %struct.tl_combinator_tree** %3, align 8
  %4 = load %struct.tl_combinator_tree*, %struct.tl_combinator_tree** %3, align 8
  %5 = call i32 @assert(%struct.tl_combinator_tree* %4)
  %6 = load %struct.tl_combinator_tree*, %struct.tl_combinator_tree** %3, align 8
  %7 = getelementptr inbounds %struct.tl_combinator_tree, %struct.tl_combinator_tree* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = call i32 @TL_TYPE(i64 %8)
  %10 = load %struct.tl_combinator_tree*, %struct.tl_combinator_tree** %3, align 8
  %11 = getelementptr inbounds %struct.tl_combinator_tree, %struct.tl_combinator_tree* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 8
  %13 = call i32 @TL_ACT(i32 %12)
  %14 = call i32 @vkprintf(i32 2, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i32 %9, i32 %13)
  %15 = load %struct.tl_combinator_tree*, %struct.tl_combinator_tree** %3, align 8
  %16 = getelementptr inbounds %struct.tl_combinator_tree, %struct.tl_combinator_tree* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @type_type, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %37

21:                                               ; preds = %1
  %22 = load %struct.tl_combinator_tree*, %struct.tl_combinator_tree** %3, align 8
  %23 = getelementptr inbounds %struct.tl_combinator_tree, %struct.tl_combinator_tree* %22, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = icmp sge i64 %24, 0
  br i1 %25, label %26, label %34

26:                                               ; preds = %21
  %27 = load %struct.tl_combinator_tree*, %struct.tl_combinator_tree** %3, align 8
  %28 = getelementptr inbounds %struct.tl_combinator_tree, %struct.tl_combinator_tree* %27, i32 0, i32 1
  %29 = load i64, i64* %28, align 8
  %30 = icmp sgt i64 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %26
  %32 = call i32 @TL_ERROR(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %2, align 4
  br label %37

33:                                               ; preds = %26
  store i32 1, i32* %2, align 4
  br label %37

34:                                               ; preds = %21
  %35 = load %struct.tl_combinator_tree*, %struct.tl_combinator_tree** %3, align 8
  %36 = call i32 @_tl_finish_subtree(%struct.tl_combinator_tree* %35, i32 0, i32 0)
  store i32 %36, i32* %2, align 4
  br label %37

37:                                               ; preds = %34, %33, %31, %20
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}

declare dso_local i32 @assert(%struct.tl_combinator_tree*) #1

declare dso_local i32 @vkprintf(i32, i8*, i32, i32) #1

declare dso_local i32 @TL_TYPE(i64) #1

declare dso_local i32 @TL_ACT(i32) #1

declare dso_local i32 @TL_ERROR(i8*) #1

declare dso_local i32 @_tl_finish_subtree(%struct.tl_combinator_tree*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
